Changelog v5.0.26 (2024-05-27):
- Fixed embeds
- Fixed season
- Removed Syncurl

Changelog v5.0.25 (2024-05-12):
- Fixed image issue

Changelog v5.0.24 (2024-05-10):
- Fixed search error
- Fixed download focus
- Added offline search

Changelog v5.0.23 (2024-05-04):
- Moved refresh token to settings
- Moved File selection to source select context menu
- Added Download Manager
- Fixed Embeds
- Added remove from search history context menu
- Removed consumet
- Added anizip
- Removed anify
- Added dub wrapper to mal, simkl, and anilist watchlists

Changelog v5.0.22 (2024-04-27):
- added refresh debrid token
- some bug fixes

Changelog v5.0.20 (2024-03-23):
- Fixed if none is episode number error

Changelog v5.0.19 (2024-02-29):
- Improve animeschulde
- Fixed mpaa rating error

Changelog v5.0.19 (2024-02-29):
- increase speeds only checking dub info once per day
- only lookup filler info once when adding to database
- added animeschedule to get dub data

Changelog v5.0.18 (2023-11-05):
- Fixed autoscroll on episode
- Improved Cloud Scraping

Changelog v5.0.17 (2023-10-21):
- needs to match season#
- Improved season info

Changelog v5.0.16 (2023-10-18):
- Fixed context english naming
- Improved skip intro
- Improved dub dates; does not neeed to match season#

Changelog v5.0.15 (2023-10-03):
- Improved geting season number
- Fixed Fanart with trakt
- Added Jikanmoe for getting meta data

Changelog v5.0.14 (2023-09-24):
- Removed enime
- Fixed Simkl as main source

Changelog v5.0.13 (2023-09-17):
- Fixed Gogo error
- Re-added Consumet

Changelog v5.0.12 (2023-09-09):
- Completed Watchlists
- Updated embeds
- Fixed minor errors

Changelog v5.0.11 (2023-09-03):
- Added Simkl Watchlist
- Fixed Kitsu Watchlist

Changelog v5.0.10 (2023-08-26):
- Fixed naming with watchlist context menu
- Fixed delete from database payload error
- Removed bare excepts

Changelog v5.0.9 (2023-08-21):
- Started fixing kitsu watchlist
- Changed ok dialog to notify
- Fixed Mark as Watched Watchlist