@@ -23,7 +23,7 @@ class AnilistSyncDatabase:
         # You will need to update the below version number to match the new addon version
         # This will ensure that the metadata required for operations is available
         # You may also update this version number to force a rebuild of the database after updating Otaku
-        self.last_meta_update = '1.0.4.2'
+        self.last_meta_update = '1.0.4'
 
         control.anilistSyncDB_lock.acquire()
 
