@@ -1,3 +1,9 @@
+Changelog v5.0.27 (2024-05-29):
+- Added database.db
+- got rid of trakt
+- Fixed some small bugs
+- Fixed Local Files
+
 Changelog v5.0.26 (2024-05-27):
 - Fixed embeds
 - Fixed season
